上げ忘れと養成講座の課題

--- a/nakamura11-pre/index.html
+++ b/nakamura11-pre/index.html
@@ -10,11 +10,11 @@
 <body>
   <header>
     <h1 class="header-logo logo">SALON BEPPU</h1>
-            <div class="ham">
+            <button class="ham">
             <span></span>
             <span></span>
             <span></span>
-        </div>
+        </button>
     <nav class="header-menu">
       <ul>
         <li><a href="#menu">MENU</a></li>
